[package]
name = "questions"
version = "0.1.0"
authors = ["Yusuke Sangenya <longinus.eva@gmail.com>"]

[dependencies]
rocket = "0.3.0"
rocket_codegen = "0.3.0"

postgres = "0.14.2"
r2d2 = "0.7.3"
r2d2_postgres = "0.12.0"

[dependencies.rocket_contrib]
version = "0.3.0"
default-features = false
features = ["tera_templates"]
